path rearrangment and reconstruction of jupyter notebook

--- a/industrial_data_system/notebooks/00_quick_start.ipynb
+++ b/industrial_data_system/notebooks/00_quick_start.ipynb
@@ -109,18 +109,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add parent directory to path\n",
-    "sys.path.insert(0, os.path.abspath('..'))\n",
+    "# Add parent directories to path for module imports\n",
+    "notebook_dir = Path(os.path.abspath(''))\n",
+    "project_root = notebook_dir.parent.parent  # Go up two levels from notebooks/\n",
+    "sys.path.insert(0, str(project_root))\n",
     "\n",
     "# Test IDS module imports\n",
     "try:\n",
-    "    from core.config import get_config\n",
+    "    from industrial_data_system.core.config import get_config\n",
     "    print(\"✓ IDS core modules accessible\")\n",
     "except Exception as e:\n",
     "    print(f\"⚠ IDS core modules: {str(e)}\")\n",
     "\n",
     "try:\n",
-    "    from core.db_manager import DatabaseManager\n",
+    "    from industrial_data_system.core.db_manager import DatabaseManager\n",
     "    print(\"✓ Database manager accessible\")\n",
     "except Exception as e:\n",
     "    print(f\"⚠ Database manager: {str(e)}\")"
