--- a/industrial_data_system/notebooks/03_anomaly_detection.ipynb
+++ b/industrial_data_system/notebooks/03_anomaly_detection.ipynb
@@ -30,10 +30,13 @@
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "\n",
-    "# Add parent directory to path\n",
-    "sys.path.insert(0, os.path.abspath('..'))\n",
+    "# Add parent directories to path for module imports\n",
+    "notebook_dir = Path(os.path.abspath(''))\n",
+    "project_root = notebook_dir.parent.parent  # Go up two levels from notebooks/\n",
+    "sys.path.insert(0, str(project_root))\n",
     "\n",
-    "print(\"Imports successful!\")"
+    "print(\"Imports successful!\")\n",
+    "print(f\"Project root: {project_root}\")"
    ]
   },
   {
@@ -49,14 +52,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.asc_utils import load_and_process_asc_file\n",
-    "from core.db_manager import DatabaseManager\n",
+    "from industrial_data_system.utils.asc_utils import load_and_process_asc_file\n",
+    "from industrial_data_system.core.db_manager import DatabaseManager\n",
     "\n",
     "# Initialize database manager\n",
     "db_manager = DatabaseManager()\n",
     "\n",
     "print(\"✓ Database manager initialized\")\n",
-    "print(f\"  Database path: {db_manager.db_path}\")"
+    "print(f\"  Database initialized successfully\")"
    ]
   },
   {
@@ -111,7 +114,7 @@
    "outputs": [],
    "source": [
     "# Path to test ASC file\n",
-    "test_file = '../Tests/Data/V24-2025__0011_2.ASC'\n",
+    "test_file = str(project_root / 'industrial_data_system' / 'Tests' / 'Data' / 'V24-2025__0011_2.ASC')\n",
     "\n",
     "if os.path.exists(test_file):\n",
     "    print(f\"Loading test file: {test_file}\")\n",
