--- a/industrial_data_system/notebooks/05_integration_testing.ipynb
+++ b/industrial_data_system/notebooks/05_integration_testing.ipynb
@@ -23,13 +23,15 @@
     "from pathlib import Path\n",
     "import time\n",
     "\n",
-    "# Add parent directory to path\n",
-    "sys.path.insert(0, os.path.abspath('..'))\n",
-    "sys.path.insert(0, os.path.join(os.path.abspath('..'), 'Tests'))\n",
+    "# Add parent directories to path for module imports\n",
+    "notebook_dir = Path(os.path.abspath(''))\n",
+    "project_root = notebook_dir.parent.parent  # Go up two levels from notebooks/\n",
+    "sys.path.insert(0, str(project_root))\n",
     "\n",
     "print(\"Imports successful!\")\n",
     "print(f\"Python version: {sys.version}\")\n",
-    "print(f\"Working directory: {os.getcwd()}\")"
+    "print(f\"Working directory: {os.getcwd()}\")\n",
+    "print(f\"Project root: {project_root}\")"
    ]
   },
   {
@@ -50,10 +52,9 @@
     "\n",
     "# Test imports\n",
     "imports_to_test = [\n",
-    "    ('utils.asc_utils', ['load_and_process_asc_file', 'convert_asc_to_parquet']),\n",
-    "    ('core.config', ['get_config']),\n",
-    "    ('core.db_manager', ['DatabaseManager']),\n",
-    "    ('ai.toolkit', []),\n",
+    "    ('industrial_data_system.utils.asc_utils', ['load_and_process_asc_file', 'convert_asc_to_parquet']),\n",
+    "    ('industrial_data_system.core.config', ['get_config']),\n",
+    "    ('industrial_data_system.core.db_manager', ['DatabaseManager']),\n",
     "]\n",
     "\n",
     "for module_name, items in imports_to_test:\n",
@@ -151,25 +152,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core.db_manager import DatabaseManager\n",
+    "from industrial_data_system.core.db_manager import DatabaseManager\n",
     "\n",
     "print(\"Testing database operations...\\n\")\n",
     "\n",
     "try:\n",
     "    # Initialize database\n",
     "    db_manager = DatabaseManager()\n",
-    "    print(f\"✓ Database initialized: {db_manager.db_path}\")\n",
+    "    print(f\"✓ Database initialized\")\n",
     "    \n",
     "    # Test model registry operations\n",
     "    models = db_manager.get_all_models()\n",
     "    print(f\"✓ Model registry accessible: {len(models) if models else 0} models found\")\n",
-    "    \n",
-    "    # Test file registry operations (if available)\n",
-    "    try:\n",
-    "        files = db_manager.get_all_files()\n",
-    "        print(f\"✓ File registry accessible: {len(files) if files else 0} files found\")\n",
-    "    except AttributeError:\n",
-    "        print(\"ℹ File registry method not available\")\n",
     "    \n",
     "    db_success = True\n",
     "except Exception as e:\n",
@@ -190,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core.config import get_config\n",
+    "from industrial_data_system.core.config import get_config\n",
     "\n",
     "print(\"Testing configuration management...\\n\")\n",
     "\n",
@@ -223,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.asc_utils import (\n",
+    "from industrial_data_system.utils.asc_utils import (\n",
     "    load_and_process_asc_file,\n",
     "    load_and_process_csv_file,\n",
     "    load_and_process_tdms_file\n",
